src/test/deca/codegen/invalid/with-object/instanceof_with_wrong_type.deca
class Animal {
    int weight;
    int size = 200;
    boolean isAlive = true;

    void scream(){
        println("hahaha");
    }
}

class Horse extends Animal {
    void eat(){
        println("hum");
    }
}

{



}